# chasquifest-auditoria-visual

./: .gitignore  README.md  pyproject.toml  respuestas.md
data/: caso1_taquilla_chasquifest.csv  caso2_logistica_chasquifest.csv  caso3_asistencia_mensual_chasquifest.csv  caso4_impacto_departamental_chasquifest.csv  caso5_campania_killa_chasquifest.csv
docs/: index.html
informe/: informe.tex  references.bib
informe/figuras/: estilo_figuras.py  gen_caso1.py  gen_caso2.py  gen_caso3.py  gen_caso4.py  gen_caso5.py
informe/secciones/: caso1.tex  caso2.tex  caso3.tex  caso4.tex  caso5.tex
notebook/: caso1.ipynb  caso2.ipynb  caso3.ipynb  caso4.ipynb  caso5.ipynb
