[project]
name = "ef"
version = "0.1.0"
description = "TODO: one-line description"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.2",
    "pyarrow>=15.0",
    "rich>=13.0",
    "pandas>=3.0.3",
    "numpy>=2.5.1",
    "matplotlib>=3.11.1",
    "jupyterlab>=4.6.1",
    "ipykernel>=7.3.0",
    "scipy>=1.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ef"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
